--- a/css/style.css
+++ b/css/style.css
@@ -266,12 +266,12 @@ body {
   visibility: hidden;
 }
 .header__menu.show {
-  height: 652px;
+  height: 620px;
   visibility: visible;
 }
 .header__navigation {
-  padding-top: 160px;
-  padding-bottom: 38px;
+  padding-top: 100px;
+  padding-bottom: 25px;
   list-style-type: none;
 }
 
@@ -279,7 +279,7 @@ body {
   margin-bottom: 22px;
 }
 .header__link {
-  font-size: 26px;
+  font-size: 24px;
   text-decoration: none;
   color: #9d9d9d;
 }
@@ -341,6 +341,37 @@ body {
 .header__link:hover {
   color: #ef9982;
 }
+
+/* For tablets */
+@media (max-width: 1023px) and (min-width: 601px) {
+  .header__navigation {
+    padding-top: 120px;
+    padding-bottom: 28px;
+    list-style-type: none;
+  }
+  .header__link {
+    font-size: 18px;
+  }
+  .header__menu.show {
+    height: 580px;
+  }
+}
+
+/* For mobile devices */
+@media (max-width: 600px) {
+  .header__navigation {
+    padding-top: 120px;
+    padding-bottom: 15px;
+    list-style-type: none;
+  }
+  .header__link {
+    font-size: 16px;
+  }
+  .header__menu.show {
+    height: 550px;
+  }
+}
+
 
 
 /* BANNER */
@@ -406,12 +437,10 @@ body {
   width: 55%;
 }
 .banner__iphone-1 {
-  width: 358px;
-  height: 546px;
+  width: 55%;
 }
 .banner__iphone-2 {
   width: 50%;
-  /* height: 487px; */
   position: absolute;
   top:25%;
   left: 50%;
@@ -425,9 +454,6 @@ body {
   }
   .banner__text {
     width: 40%;
-  }
-  .banner__iphone {
-    width: 55%;
   }
 }
 
@@ -460,6 +486,9 @@ body {
   .banner__view::before {
     width: 20px;
   }
+  /* .banner__iphone-1 {
+    display: none;
+  } */
 }
 
 
@@ -1118,8 +1147,9 @@ body {
   .news__item {
     width: calc(50% - 20px);
   }
-  .news__title {
-    font-size: 15px !important;
+  .news__content {
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 }
 
@@ -1132,8 +1162,8 @@ body {
   .news__heading {
     margin-bottom: 40px;
   }
-  .news__title {
-    font-size: 10px !important;
+  .news__content {
+    flex-direction: column;
   }
 }
 
